incorporated several of Kevin's ideas/solutions; need to fix the spacing of the left panel on large screens

--- a/bbq/index.css
+++ b/bbq/index.css
@@ -3,13 +3,13 @@
 }
 
 body {
-  background-color: #000;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 1rem;
   font-weight: 400;
+  text-align: center;
   line-height: 1.5;
-  margin: 0;
   color: #5a5a5a;
+  margin: 0;
 }
 
 img {
@@ -19,43 +19,24 @@ img {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  /* font-weight: 400; */
-  background-color: #404040;
-  background-image: url(images/dark-ribs.jpg);
+  background-image: url(images/ribs.jpg);
+  background-color: rgb(0, 0, 128, 0.5);
+  background-blend-mode: multiply;
   background-position: center;
-  object-fit: contain;
-  background-repeat: no-repeat;
-  height: 40vh;
-  text-align: center;
+  background-size: cover;
   padding: 0 4em 2em;
 }
 
 aside {
   background-color: #fff;
-  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  padding: 0 2em;
-}
-
-input {
-  font-size: 0.625rem;
-  border-radius: 4px;
-  border: 1px solid #5a5a5a;
-  padding: 0.5rem;
-}
-
-input::placeholder {
-  text-align: center;
+  padding: 2em;
 }
 
 .container {
-  max-width: 965px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
@@ -69,9 +50,9 @@ input::placeholder {
 
 h1 {
   font-size: 2.25rem;
-  font-weight: 400;
+  font-weight: 300;
   color: #fff;
-  margin: 0;
+  margin: 2em 0;
   line-height: 1em;
 }
 
@@ -110,15 +91,17 @@ small {
   border-top: 0.5em solid;
 }
 
-.subtitle {
-  margin: 0;
+input {
+  font-size: 0.625rem;
+  font-family: inherit;
+  text-align: inherit;
+  border-radius: 4px;
+  border: 1px solid #5a5a5a;
+  padding: 0.5rem;
+  margin-bottom: 0.75em;
 }
 
-#email {
-  margin: 0.75em 0;
-}
-
-form {
+#register {
   width: 80%;
   margin-bottom: 1rem;
 }
@@ -155,7 +138,7 @@ form {
   margin: 0;
 }
 
-@media (min-width: 565px) {
+@media (min-width: 700px) {
   body {
     font-size: 1.25rem;
   }
@@ -166,20 +149,20 @@ form {
   }
 
   main {
-    width: 65%;
-    /* display: block; */
+    width: 60%;
   }
 
   aside {
-    width: 35%;
-    min-width: 400px;
+    width: 40%;
+    /* min-width: 400px; */
   }
 
   h1 {
     font-size: 3.5rem;
+    margin: 0.5em 0;
   }
 
-  h2 {
+  h2 h1 + p {
     font-size: 1.75rem;
   }
 
